[package]
name = "nylon-mesh"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.11.1"
http = "1.4.0"
moka = { version = "0.12.13", features = ["future", "sync"] }
once_cell = "1.19"
pingora = { version = "0.7.0", features = ["openssl"] }
pingora-core = { version = "0.7.0", features = ["openssl"] }
pingora-proxy = "0.7.0"
pingora-cache = "0.7.0"
pingora-load-balancing = "0.7.0"
redis = { version = "1.0.4", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = { version = "0.10", default-features = false }

nylon-ring-host = { git = "https://github.com/AssetsArt/nylon-ring", package = "nylon-ring-host" }
