[package]
name = "nylon-mesh"
version = "1.0.4"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1", default-features = false, features = ["secure"] }
async-trait = "0.1"
bytes = "1.11.1"
http = "1.4.0"
moka = { version = "0.12.13", features = ["future", "sync"] }
once_cell = "1.19"
pingora = { version = "0.7.0", features = ["openssl"] }
pingora-core = { version = "0.7.0", features = ["openssl"] }
pingora-proxy = "0.7.0"
pingora-cache = "0.7.0"
pingora-load-balancing = "0.7.0"
redis = { version = "1.0.4", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = { version = "0.10", default-features = false }
serde_json = "1.0.149"
ipnet = { version = "2.11.0", features = ["serde"] }

[profile.release]
overflow-checks = true
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
